--- a/COMP123 - Lesson - Part02/COMP123 - Lesson - Part02.csproj
+++ b/COMP123 - Lesson - Part02/COMP123 - Lesson - Part02.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Hero.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="villain.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
